modification on the dataframe notebook

--- a/Spark/DataFrame.ipynb
+++ b/Spark/DataFrame.ipynb
@@ -17,6 +17,25 @@
    "source": [
     "df =spark.createDataFrame(data,shema)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7873414f-5a88-4a20-ad29-ac306fcbb268",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "data=[(1,\"Naval\"),(2,\"Raj\")]\n",
+    "schema=\"id int,name string\""
+   ]
   }
  ],
  "metadata": {
