--- a/Spark/DataFrame.ipynb
+++ b/Spark/DataFrame.ipynb
@@ -36,6 +36,31 @@
     "data=[(1,\"Naval\"),(2,\"Raj\")]\n",
     "schema=\"id int,name string\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "creating a spark dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=spark.createDataFrame(data,schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(df)"
+   ]
   }
  ],
  "metadata": {
